fix the bug of wrapping does not work together with text strikethrough

--- a/src/tableUi/layout1.css
+++ b/src/tableUi/layout1.css
@@ -18,6 +18,11 @@
     -fx-text-fill: #dddddd;
 }
 
+.completedTaskRow{
+    -fx-strikethrough: true;
+    -fx-text-fill: #dddddd;
+}
+
 .incompleteTaskRow{
 
 }
